# tg

./: app.py  py_1000_prog.txt  pyproject.toml  slavuta_sity.txt
common/: bot_cmds_list.py
handlers/: admin_private.py  user_group.py  user_private.py
